<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/home_navigation">

    <fragment
        android:id="@+id/home_navigation"
        android:name="com.example.githubuser.ui.home.HomeFragment"
        android:label= "@string/home_label"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/favorite_navigation"
        android:name="com.example.githubuser.ui.favorite.FavoriteFragment"
        android:label="@string/favorite_label"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/setting_navigation"
        android:name="com.example.githubuser.ui.setting.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_setting_navigation_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.githubuser.ui.detail.DetailFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.githubuser.ui.setting.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_setting_navigation"
            app:destination="@id/setting_navigation" />
    </fragment>
</navigation>